<resources>
    <string name="app_name">TEADAPTA</string>
    <string name="anamnese">ANAMNESE</string>
    <string name="avaliacao_do_ambiente_domiciliar">AVALIAÇÃO DO AMBIENTE DOMICILIAR</string>
    <string name="direcionamentos_pedagogicos">DIRECIONAMENTOS PEDAGÓGICOS</string>
    <string name="ficha_de_acompanhamento">FICHA DE ACOMPANHAMENTO</string>
    <string name="observacoes">OBSERVAÇÕES</string>
    <string name="conhecendo_o_tea">CONHECENDO O TEA</string>
    <string name="n_vel_2_semelhante_s_caracter_sticas_descritas_no_n_vel_3_mas_com_menor_intensidade_no_que_cabe_aos_transtornos_de_comunica_o_e_defici_ncia_de_linguagem">Nível 2: Semelhante às características descritas no nível 3, mas com menor intensidade no que cabe aos transtornos de comunicação e deficiência de linguagem.</string>
    <string name="n_vel_3_diz_respeito_queles_que_apresentam_um_d_ficit_considerado_grave_nas_habilidades_de_comunica_o_verbais_e_n_o_verbais_ou_seja_n_o_conseguem_se_comunicar_sem_contar_com_suporte_com_isso_apresentam_dificuldade_nas_intera_es_sociais_e_tem_cogni_o_reduzida_tamb_m_possuem_um_perfil_inflex_vel_de_comportamento_tendo_dificuldade_de_lidar_com_mudan_as_tendem_ao_isolamento_social_se_n_o_estimulados">Nível 3: Diz respeito àqueles que apresentam um déficit considerado grave nas habilidades de comunicação verbais e não verbais. Ou seja, não conseguem se comunicar sem contar com suporte. Com isso apresentam dificuldade nas interações sociais e tem cognição reduzida. Também possuem um perfil inflexível de comportamento, tendo dificuldade de lidar com mudanças. Tendem ao isolamento social, se não estimulados.</string>
    <string name="n_vel_2_exigindo_apoio_substancial">Nível 2 - Exigindo apoio substancial</string>
    <string name="n_vel_3_exigindo_apoio_muito_substancial">Nível 3 - Exigindo apoio muito substancial</string>
    <string name="todo" />
    <string name="nivel_1_exigindo_apoio">Nível 1: Exigindo Apoio</string>
    <string name="o_dsm_5_publica_o_oficial_da_associa_o_americana_de_psiquiatria_que_define_transtornos_psiqui_tricos_e_de_desenvolvimento_de_maio_de_2013_define_o_autismo_como_uma_nica_desordem_do_espectro_sendo_considerado_um_conjunto_de_crit_rios_que_descrevem_os_sintomas_que_podem_impactar_nas_reas_de_comunica_o_social_comportamento_flexibilidade_e_sensibilidade_sensorial">O DSM-5  – Publicação oficial da Associação Americana de Psiquiatria que define transtornos psiquiátricos e de desenvolvimento, de maio de 2013 -, define o autismo como uma única “desordem do espectro”, sendo considerado um conjunto de critérios que descrevem os sintomas que podem impactar nas áreas de comunicação social, comportamento, flexibilidade e sensibilidade sensorial.</string>
    <string name="n_vel_1_necessita_de_pouco_suporte_ncom_suporte_pode_ter_dificuldade_para_se_comunicar_mas_n_o_um_limitante_para_intera_es_sociais_problemas_de_organiza_o_e_planejamento_impedem_a_independ_ncia_precisam_de_dicas_e_aux_lios_pontuais">Nível 1: (Necessita de pouco suporte)​\n\nCom suporte, pode ter dificuldade para se comunicar, mas não é um limitante para interações sociais. Problemas de organização e planejamento impedem a independência. Precisam de dicas e auxílios pontuais.</string>
    <string name="january">Janeiro</string>
    <string name="february">Fevereiro</string>
    <string name="march">Março</string>
    <string name="nome">Nome:</string>
    <string name="identifica_o_da_crian_a">Identificação da criança</string>
    <string name="data_de_nasc">Data de Nasc.:</string>
    <string name="idade">Idade:</string>
    <string name="peso">Peso (kg):</string>
    <string name="altura">Altura (Cm):</string>
    <string name="selecionar">Selecionar</string>
    <string name="filho_nico">Filho único?</string>
    <string name="escolaridade">Escolaridade:</string>
    <string name="privada_ou_p_blica">Privada ou Pública?</string>
    <string name="pr_ximo">Próximo</string>
    <string name="identifica_o_dos_pais">Identificação dos pais</string>
    <string name="nome_do_pai">Nome do Pai:</string>
    <string name="tel">Tel.:</string>
    <string name="forma_o_acad_mica">Formação acadêmica:</string>
    <string name="profiss_o">Profissão:</string>
    <string name="nome_da_m_e">Nome da Mãe:</string>
    <string name="voltar">Voltar</string>
    <string name="segue_alguma_religi_o">Segue alguma religião?</string>
    <string name="composi_o_familiar">Composição familiar:</string>
    <string name="e_mail_do_respons_vel">E-mail do responsável</string>
    <string name="desenvolvimento_integral_da_crian_a_desenvolvimento_motor">Desenvolvimento integral da criança - Desenvolvimento motor</string>
    <string name="sustentou_a_cabeca">Sustentou a cabeça:</string>
    <string-array name="Escolha">
        <item>Sim</item>
        <item>Não</item>
    </string-array>
    <string-array name="Escolaridade_infantil">
        <item>Educação infantil completo</item>
        <item>Educação infantil incompleto</item>
        <item>Ensino fundamental completo</item>
        <item>Ensino fundamental incompleto</item>
        <item>Ensino médio completo</item>
        <item>Ensino médio incompleto</item>
    </string-array>
    <string-array name="Escolaridade_adulto">
        <item>Ensino fundamental completo</item>
        <item>Ensino fundamental incompleto</item>
        <item>Ensino médio completo</item>
        <item>Ensino médio incompleto</item>
        <item>Ensino superior completo</item>
        <item>Ensino superior incompleto</item>
        <item>Pós-graduação completa</item>
        <item>Pós-graduação incompleta</item>
        <item>Mestrado completo</item>
        <item>Mestrado incompleto</item>
        <item>Doutorado completo</item>
        <item>Doutorado incompleto</item>
    </string-array>
    <string-array name="Escola">
        <item>Particular</item>
        <item>Pública</item>
    </string-array>
    <string name="meses">meses</string>
    <string name="ficou_de_p_sem_apoio">Ficou de pé sem apoio:</string>
    <string name="rolou_lateralmente">Rolou lateralmente:</string>
    <string name="virou_se">Virou se:</string>
    <string name="sentou_com_apoio">Sentou com apoio:</string>
    <string name="arrastou_se">Arrastou se:</string>
    <string name="engatinhou">Engatinhou:</string>
    <string name="ficou_de_p_com_apoio">Ficou de pé com apoio:</string>
    <string name="ficou_de_pe_sem_apoio">Ficou de pé sem apoio:</string>
    <string name="andou_com_apoio">Andou com apoio:</string>
    <string name="andou_sem_apoio">Andou sem apoio:</string>
    <string name="desenvolvimento_integral_da_crian_a_a_crian_a_atualmente">Desenvolvimento integral da criança - A criança atualmente</string>
    <string name="usa_as_duas_m_os_indiscriminadamente">Usa as duas mãos indiscriminadamente?</string>
    <string name="canhoto">Canhoto</string>
    <string name="destro">Destro</string>
    <string name="observa_dificuldade_de_coordena_o_motora_no_seu_filho">Observa dificuldade de coordenação motora no seu filho?</string>
    <string name="cai_frequentemente">Cai frequentemente?</string>
    <string name="apanha_objetos_sem_dificuldades">Apanha objetos sem dificuldades?</string>
    <string name="imita_gestos_simples">Imita gestos simples?</string>
    <string name="arremessa_objetos_sem_dificuldade">Arremessa objetos sem dificuldade?</string>
    <string name="segura_objetos_sem_dificuldade">Segura objetos sem dificuldade?</string>
    <string name="utiliza_formas_particulares_de_organiza_o_motora_tiques">Utiliza formas particulares de organização motora (tiques)?</string>
    <string name="desenvolvimento_integral_da_crian_a_desenvolvimento_lingu_stico">Desenvolvimento integral da criança - Desenvolvimento linguístico</string>
    <string name="respondeu_a_qualquer_som">Respondeu a qualquer som:</string>
    <string name="respondeu_ao_som_da_voz_humana">Respondeu ao som da voz humana:</string>
    <string name="vocalizou">Vocalizou:</string>
    <string name="frase">Frase:</string>
    <string name="primeiras_palavras">Primeiras palavras:</string>
    <string name="atualmente_apresenta_problemas_na_comunica_o_verbal">Atualmente apresenta problemas na comunicação verbal?</string>
    <string name="descrever">Descrever:</string>
    <string name="qual">Qual?</string>
    <string name="desenvolvimento_integral_da_crian_a_desenvolvimento_socioemocional">Desenvolvimento integral da criança - Desenvolvimento socioemocional</string>
    <string name="reage_favoravelmente_s_pessoas">Reage favoravelmente às pessoas?</string>
    <string name="como_voc_costuma_observar_o_comportamento_de_seu_filho">Como você costuma observar o comportamento de seu filho?</string>
    <string name="que_observa_es_voc_faz_sobre_o_comportamento_de_seu_filho">Que observações você faz sobre o comportamento de seu filho?</string>
    <string name="reage_favoravelmente_a_novidades">Reage favoravelmente a novidades?</string>
    <string name="procura_frequentemente_a_prote_o_dos_pais">Procura frequentemente a proteção dos pais?</string>
    <string name="expressava_as_suas_necessidades">Expressava as suas necessidades?</string>
    <string name="brinca_com_crian_as_e_adultos">Brinca com crianças e adultos?</string>
    <string name="adapta_se_facilmente_s_situa_es_em_casa_e_na_escola">Adapta-se facilmente às situações em casa e na escola?</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="pr_tica_de_exerc_cio_f_sico">Prática de exercício físico</string>
    <string name="h_limita_es_para_fazer_exerc_cios">Há limitações para fazer exercícios?</string>
    <string name="a_crian_a_est_se_exercitando_atualmente">A criança está se exercitando atualmente?</string>
    <string name="qual_is">Qual(is)?</string>
    <string name="menos_de_6_meses">Menos de 6 meses</string>
    <string name="entre_seis_meses_a_1_ano">Entre seis meses a 1 ano</string>
    <string name="mais_de_1_ano">Mais de 1 ano</string>
    <string name="corpo_gestos_e_movimentos">CORPO, GESTOS E MOVIMENTOS</string>
    <string name="professor_de_acordo_com_a_base_nacional_comum_curricular_brasil_2018_voc_deve">Professor, de acordo com a Base Nacional Comum Curricular (BRASIL, 2018), você deve:</string>
    <string name="relat_rio">RELATÓRIO</string>
    <string name="oportunizar_a_explora_o_do_mundo_do_espa_o_e_dos_objetos_pela_crian_a">Oportunizar a exploração do mundo, do espaço e dos objetos pela criança;</string>
    <string name="possibilitar_o_conhecimento_e_reconhecimento_das_sensa_es_e_fun_es_de_seu_corpo_e_com_seus_gestos_e_movimentos_identificar_suas_potencialidades_e_seus_limites">Possibilitar o conhecimento e reconhecimento das sensações e funções de seu corpo e, com seus gestos e movimentos, identificar suas potencialidades e seus limites;</string>
    <string name="promover_oportunidades_ricas_para_que_as_crian_as_possam_com_seus_pares_explorar_e_vivenciar_um_amplo_repert_rio_de_movimentos_gestos_olhares_sons_e_m_micas_com_o_corpo_para_descobrir_variados_modos_de_ocupa_o_e_uso_do_espa_o_com_o_corpo">Promover oportunidades ricas para que as crianças possam, com seus pares, explorar e vivenciar um amplo repertório de movimentos, gestos, olhares, sons e mímicas com o corpo, para descobrir variados modos de ocupação e uso do espaço com o corpo;</string>
    <string name="estabelecer_rela_es_e_viv_ncias_que_produzem_conhecimentos_sobre_si_sobre_o_outro_e_sobre_o_universo_social_e_cultural">Estabelecer relações e vivências que produzem conhecimentos sobre si, sobre o outro e sobre o universo social e cultural;</string>
    <string name="direcionamento_4">Direcionamento 4</string>
    <string name="direcionamento_3">Direcionamento 3</string>
    <string name="direcionamento_2">Direcionamento 2</string>
    <string name="direcionamento_1">Direcionamento 1</string>
    <string name="direcionamento">DIRECIONAMENTO</string>
</resources>