<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#deebf7"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ANAMNESE"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/background_button"
            android:gravity="center|center_horizontal"
            android:text="@string/anamnese"
            android:onClick="submit2"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/tea"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/background_button"
            android:text="@string/conhecendo_o_tea"
            android:onClick="submit"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/direcionamentos"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/background_button"
            android:text="@string/direcionamentos_pedagogicos"
            tools:ignore="TextSizeCheck"
            android:onClick="submit4"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ficha"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/background_button"
            android:onClick="submit5"
            android:text="@string/relat_rio" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>