<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#deebf7"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/corpo_gestos_e_movimentos"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:justificationMode="inter_word"
            android:text="@string/professor_de_acordo_com_a_base_nacional_comum_curricular_brasil_2018_voc_deve"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/direcionamento"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center|start"
            android:minHeight="48dp"
            android:onClick="toggleText1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textMain1"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:text="@string/direcionamento_1"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />

            <ImageView
                android:id="@+id/arrowIcon1"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:clickable="true"
                android:contentDescription="@string/todo"
                android:focusable="true"
                android:onClick="toggleText1"
                android:src="@drawable/seta_para_baixo"
                tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </LinearLayout>

        <TextView
            android:id="@+id/textAdditional1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/oportunizar_a_explora_o_do_mundo_do_espa_o_e_dos_objetos_pela_crian_a"
            android:textColor="#000000"
            android:visibility="gone"
            tools:targetApi="o" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center|start"
            android:minHeight="48dp"
            android:onClick="toggleText2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textMain2"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:text="@string/direcionamento_2"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />

            <ImageView
                android:id="@+id/arrowIcon2"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:clickable="true"
                android:contentDescription="@string/todo"
                android:focusable="true"
                android:onClick="toggleText2"
                android:src="@drawable/seta_para_baixo"
                tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </LinearLayout>

        <TextView
            android:id="@+id/textAdditional2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/estabelecer_rela_es_e_viv_ncias_que_produzem_conhecimentos_sobre_si_sobre_o_outro_e_sobre_o_universo_social_e_cultural"
            android:textColor="#000000"
            android:visibility="gone"
            tools:targetApi="o" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center|start"
            android:minHeight="48dp"
            android:onClick="toggleText3"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textMain3"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:text="@string/direcionamento_3"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />

            <ImageView
                android:id="@+id/arrowIcon3"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:clickable="true"
                android:contentDescription="@string/todo"
                android:focusable="true"
                android:onClick="toggleText3"
                android:src="@drawable/seta_para_baixo"
                tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </LinearLayout>

        <TextView
            android:id="@+id/textAdditional3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/possibilitar_o_conhecimento_e_reconhecimento_das_sensa_es_e_fun_es_de_seu_corpo_e_com_seus_gestos_e_movimentos_identificar_suas_potencialidades_e_seus_limites"
            android:textColor="#000000"
            android:visibility="gone"
            tools:targetApi="o" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center|start"
            android:minHeight="48dp"
            android:onClick="toggleText4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textMain4"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:text="@string/direcionamento_4"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />

            <ImageView
                android:id="@+id/arrowIcon4"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:clickable="true"
                android:contentDescription="@string/todo"
                android:focusable="true"
                android:onClick="toggleText4"
                android:src="@drawable/seta_para_baixo"
                tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </LinearLayout>

        <TextView
            android:id="@+id/textAdditional4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/promover_oportunidades_ricas_para_que_as_crian_as_possam_com_seus_pares_explorar_e_vivenciar_um_amplo_repert_rio_de_movimentos_gestos_olhares_sons_e_m_micas_com_o_corpo_para_descobrir_variados_modos_de_ocupa_o_e_uso_do_espa_o_com_o_corpo"
            android:textColor="#000000"
            android:visibility="gone"
            tools:targetApi="o" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>